# space-game

./: .clang-format  .gitignore  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  DataFormat.cpp  DataFormat.hpp  GameEntity.cpp  GameEntity.hpp  IGameStage.hpp  Map.cpp  Map.hpp  MathUtils.cpp  MathUtils.hpp  Polygon.hpp  README.md  SAP.cpp  SAP.hpp  SDLHelper.cpp  SDLHelper.hpp  ScoreListManager.cpp  ScoreListManager.hpp  TextRenderer.cpp  TextRenderer.hpp  main.cpp
AI/: ContextSteering.cpp  ContextSteering.hpp  FlowField.cpp  FlowField.hpp
Data/: Map.data
Entity/: Enemy.cpp  Enemy.hpp  GameEntity.cpp  GameEntity.hpp  Laser.cpp  Laser.hpp  Meteor.cpp  Meteor.hpp  PlayerShip.cpp  PlayerShip.hpp  PowerUpHealth.cpp  PowerUpHealth.hpp  Ship.cpp  Ship.hpp
Math/: Helper.cpp  Helper.hpp  Polygon.cpp  Polygon.hpp  Vec2.hpp
Particle/: Explosion.cpp  Explosion.hpp  Particle.cpp  Particle.hpp
Screen/: AboutScreen.cpp  AboutScreen.hpp  GameOverScreen.cpp  GameOverScreen.hpp  GamePauseScreen.cpp  GamePauseScreen.hpp  GameScreen.cpp  GameScreen.hpp  GameStageScreen.cpp  GameStageScreen.hpp  IScreen.hpp  MainScreen.cpp  MainScreen.hpp  ScoreListScreen.cpp  ScoreListScreen.hpp
UI/: Button.cpp  Button.hpp  Column.cpp  Column.hpp  LRLabel.cpp  LRLabel.hpp  Label.cpp  Label.hpp  TextInput.cpp  TextInput.hpp  View.cpp  View.hpp
script/: Build-Map.ps1  Install-Deps-Win32.ps1
